completed: fixed the large brown boxes gap issue

--- a/css/flexbox-fundamentals-exercise-bonus.css
+++ b/css/flexbox-fundamentals-exercise-bonus.css
@@ -36,7 +36,7 @@ section {
     border: 2px solid black;
 }
 
-/* top section with green boxes styling starts here */
+/* ----------------- green boxes ----------------- */
 section:nth-of-type(1) {
     height: 50px;
     background-color: #8fef8f;
@@ -54,7 +54,7 @@ section:nth-of-type(1) {
     align-self: flex-start;
 }
 
-/* section2 purple boxes styling starts here */
+/* ----------------- purple boxes ----------------- */
 .purple-box {
     width: 2em;
     height: 1em;
@@ -74,7 +74,7 @@ section:nth-of-type(1) {
     background-color: #0000ff;
 }
 
-/* section3 orange circle styling starts here */
+/* ----------------- orange circle ----------------- */
 h3 {
     flex-grow: 1;
 }
@@ -92,19 +92,23 @@ section:nth-child(3) {
     align-self: center;
 }
 
-/* section4 large brown boxes styling starts here */
+/* ----------------- large brown boxes ----------------- */
 section:nth-of-type(4) {
     justify-content: space-between;
 }
 
 .large-brown-box {
-    width: 108px;
-    height: 76px;
+    width: 112px;
+    height: 80px;
     background-color: #a02b2b;
 }
 
+.large-brown-box:nth-of-type(2) {
+    /*margin: 0 1em;*/
+}
 
-/* section5 yellow boxes styling starts here */
+
+/* ----------------- yellow boxes ----------------- */
 section:nth-of-type(5) {
     justify-content: space-evenly;
 }
@@ -115,7 +119,7 @@ section:nth-of-type(5) {
     background-color: #ffff00;
 }
 
-/* bottom section grey boxes styling starts here */
+/* ----------------- grey boxes ----------------- */
 section:nth-of-type(6) {
     height: 14em;
     background-color: #ff7f50;
